--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
     <!-- Edit meta tags for SEO -->
     <title>Amey Bhilegaonkar | PortFolio</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta name="title" content="Amey Bhilegaonkar | PortFolio">
     <meta name="description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
 
     <!-- Open Graph / Facebook -->
