--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,21 @@
 
     <!-- Edit meta tags for SEO -->
     <title>Amey Bhilegaonkar | PortFolio</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta name="title" content="Amey Bhilegaonkar | PortFolio">
     <meta name="description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
+    <meta name="image" property="og:image" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ameygoes.github.io">
     <meta property="og:title" content="Amey Bhilegaonkar | PortFolio">
     <meta property="og:description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
+
+
+
+
+
+
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
 
