--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Edit meta tags for SEO -->
-    <title>Amey Bhilegaonkar | PortFolio</title>
-    <meta name="title" content="Amey Bhilegaonkar | PortFolio">
-    <meta name="description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
-    <meta name="image" property="og:image" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ameygoes.github.io">
-    <meta property="og:title" content="Amey Bhilegaonkar | PortFolio">
-    <meta property="og:description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
+      <!-- HTML Meta Tags -->
+      <title>Amey Bhilegaonkar | PortFolio</title>
+      <meta name="description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
 
+      <!-- Facebook Meta Tags -->
+      <meta property="og:url" content="https://ameyportfolio.netlify.app/">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Amey Bhilegaonkar | PortFolio">
+      <meta property="og:description" content="Welcome to Amey Bhilegaonkar's Portfolio">
+      <meta property="og:image" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing">
 
+      <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta property="twitter:domain" content="ameyportfolio.netlify.app">
+      <meta property="twitter:url" content="https://ameyportfolio.netlify.app/">
+      <meta name="twitter:title" content="Amey Bhilegaonkar | PortFolio">
+      <meta name="twitter:description" content="Welcome to Amey Bhilegaonkar's Portfolio">
+      <meta name="twitter:image" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing">
 
+      <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
-
-
-    <!-- Link to a hosted image -->
-    <!-- <meta property="og:image" content=""> -->
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://ameygoes.github.io">
-    <meta property="twitter:title" content="Amey Bhilegaonkar | PortFolio">
-    <meta property="twitter:description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
