--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
       <meta property="og:type" content="website">
       <meta property="og:title" content="Amey Bhilegaonkar | PortFolio">
       <meta property="og:description" content="Welcome to Amey Bhilegaonkar's Portfolio">
-      <meta property="og:image" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing">
-
+      <meta property="og:image:secure_url" content="https://drive.google.com/file/d/1hs9t3eOMRVPRuPdvETqqK4lWa3cJhUkV/view?usp=sharing" />
       <!-- Twitter Meta Tags -->
       <meta name="twitter:card" content="summary_large_image">
       <meta property="twitter:domain" content="ameyportfolio.netlify.app">
