Added more projects"

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
       <!-- HTML Meta Tags -->
       <title>Amey Bhilegaonkar | PortFolio</title>
-      <meta name="description" content="A detailed Software Portfolio of Amey Bhilegaonkar">
+      <meta name="description" content="Amey Bhilegaonkar. Who is Amey Bhilegaonkar, Amey Bhilegaonkar Portfolio, Portfolio Amey Bhilegaonkar">
 
       <!-- Facebook Meta Tags -->
       <meta property="og:url" content="https://ameyportfolio.netlify.app/">
@@ -19,7 +19,7 @@
       <meta property="og:image:width" content="1200" />
       <!-- Twitter Meta Tags -->
       <meta name="twitter:card" content="summary_large_image">
-      <meta property="twitter:domain" content="ameyportfolio.netlify.app">
+      <meta property="twitter:domain" content="https://ameyportfolio.netlify.app">
       <meta property="twitter:url" content="https://ameyportfolio.netlify.app/">
       <meta name="twitter:title" content="Amey Bhilegaonkar | PortFolio">
       <meta name="twitter:description" content="Welcome to Amey Bhilegaonkar's Portfolio">
